polly/lib/External/isl/include/isl/union_map.h

__isl_give isl_union_map *isl_union_map_copy(__isl_keep isl_union_map *umap);